public/css/tabelaUsuarios.css
/* ... */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    align-items: center; 
}

#tbuser{
    min-height: 100vh;
    background: linear-gradient(
        #6D3534 39%, 
        #9A4E45 75%,
        #C66E57 94%,
        #E08E6D 100%
    );
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    width: 100vw;
    padding-top: 1rem;
}

.espacom {
    display: flex;
    flex-direction: column;
    width: 90vw;
}

.addUserdesktop {
    display: flex;
    align-items: center;
    justify-items: center;
    background-color: #AE5E48;
    height: 3rem;
    width: 9rem;
    border-radius: 2rem;
    align-items: center;
    justify-content: center;

}

.textop{
    font-size: 1rem;
}

.addUsermobile{
    display: none;
    align-items: center;
    height: 2.5rem;
    width: 2.5rem;
    justify-content: center;
    background-color: #AE5E48;
    
    border-radius: 1.2rem;
}


.infoUser {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1rem;
}

.topoTabelaUser {
    display: flex;
    /* o justify sempre mexe no eixo principal nesse caso row */
    justify-content: space-between;
    width: 80%;
    align-items: center;
    text-align: center;

}

.textoTitulo {
    color: var(--corclara);
    font-family: var(--fontetitulo);
    font-weight: var(--pesotitulo);
    font-size: 7.5vh;
}

.titulo {
    text-align: center;
}

.tabela{
    display: flex;
    flex-direction: column;
    width: 80%;
   
    margin-top: 3rem;
 
    justify-content: center;

    /*! para tds as colunas da tabela ficarem do msm tamanho */
    table-layout: fixed;

    /*! qunado a lateral da tabela ficar maior q a tela, com isso é posivel rolar ela pro lado sem quebrar a tabela */
    overflow-x: auto;

    border-radius: 1rem;

    background-color: var(--corclara);
}

.tabeladentro {
    width: 100%;
}

/*? colunas das tabelas coluna cabeçalho e coluna body */
.colunaCab, .colunageral{
    text-align: center;

    /* add um espaço na no topo e no baixo da div */
    padding: 1.5vh;

    font-family: var(--fonte);

}

.colunageral {
    border-top: 2px solid var(--linhatabela);
    font-weight: var(--pesogertab);
}

.colunaCab {
    color: var(--cordestaque);
    font-weight: var(--pesocabtab);
}

.textop {
    font-family: var(--fonte);
    color: var(--corclara);
}

.textoh3 {
    font-family: var(--fonte);
    color: var(--corclara);
}

.icone {
    color: var(--corclara);
    
}

.addUser {
    background-color: var(--cordestaque);

    border-radius: 1rem;
    height: 2.5rem;
    width: 8rem;

}

.pesquisar {
    width: 80%;
    padding-left: 0;
    /* background-color: red; */
    padding-top: 3vh;
}


.pesqUser {
    
    /* background-color: var(--corclara); */
    background: linear-gradient(
            135deg,
            rgba(255, 255, 255, 0.08),
            rgba(255, 255, 255, 0.03)
        );
    background-image: url(../assets/Frame94.svg); 
    /*! pra img nn repitir no fundo td */
    background-repeat: no-repeat;

    /* border-radius: 3rem;
    border: 1rem solid #6D3534; */

    /* cima direita baixo esquerda */
    padding: 1rem 1rem 1rem 3rem;

    /*! coloca o o back 1 p/ laterais e no centro de td */
    background-position: 1rem center; 

    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border: 1px solid var(--cor-laranja-200);
    box-shadow:
        inset 0 1px 1px rgba(255,255,255,0.08),
        0 8px 32px rgba(0,0,0,0.35);
    border-radius: 50px;
}

.pesqUser::placeholder {
    color: var(--cor-branco-100);
    opacity: 0.5;
    font-family: var(--fonte-primaria);
}

/* *Estilo da foto de perfil de cada usuário na coluna da tabela */
.tabelageral .foto-de-cada-usuario-na-tabela {
    height: 2rem;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    background-color: var(--cor-marrom-50);
}

/* *Animação ao passar o mouse por cima dos ícones de ação da tabela de usuários */
.tabelageral .acao {
    transition: transform 0.2s;
}

.tabelageral .acao:hover {
    transform: scale(1.35);
    cursor: pointer;
}

/* *ESTILO DO MODAL DE EDIÇÃO DE USUÁRIOS */
.modal-edicao-usuarios {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 45%;
    height: 85%;
    border-radius: 30px;
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    background-image: url(../assets/fundo-modais-editada.jpeg);
    background-size: cover;
    background-position: 50% 80%;
}    

/* *Estilo da secao do texto, da foto, e do ícone de fechar o modal */
.modal-edicao-usuarios .secao-texto-foto-fechar-modal {
    width: 90%;
    height: 23%;
    display: flex;
    justify-content: space-between;
}

/* *Estilo do texto de editar foto da capa do álbum */
.modal-edicao-usuarios .container-texto {
    font-size: 0.6rem;
    width: 30%;
    color: var(--cor-branco-300);
    font-family: var(--fonte-modal-titulo);
}

/* *Estilo do container da foto da capa do álbum */
.modal-edicao-usuarios .container-foto-de-perfil {
    display: flex;
    justify-content: center;
    align-items: center;
    aspect-ratio: 1 / 1;
    height: 100%;
    border-radius: 50%;
    background-color: var(--cor-marrom-50);
}

/* *Estilo da foto de perfil da pessoa no modal */
.foto-de-perfil-do-usuario-no-modal {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%;
    background-color: var(--cor-marrom-50);
}

/* *Estilo do container do botão de fechar modal*/
.modal-edicao-usuarios .container-botao-fechar-modal {
    display: flex;
    justify-content: flex-end;
    width: 30%;
}

/* *Estilo do botão de fechar modal*/
.modal-edicao-usuarios .botao-fechar-modal {
    border: none;
    border-radius: 50%;
    font-size: 1.5rem;
    padding: 0.1rem;
    line-height: 1;
    display: flex;
    height: fit-content;
    width: fit-content;
    background-color: var(--cor-branco-300);
}
/* ... */

